[fix] travis install dev reqs

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install: "pip install -e ."
 addons:
   postgresql: "9.4"
 before_script:
+  - pip install -r requirements.dev.txt
   - psql -c "CREATE USER test WITH password 'test';" -U postgres
   - psql -c "CREATE DATABASE test_async_pg OWNER test;" -U postgres
 script: ./run-tests
